@@ -1,3 +1,7 @@
+2008-11-11  Neal H. Walfield  <neal@gnu.org>
+
+	* btree.c: Remove dead code.
+
 2008-11-03  Neal H. Walfield  <neal@gnu.org>
 
 	* headers.m4: Don't create an empty
